make output more readable

--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
        "850"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,17 +1365,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def day13_2(data: npt.ArrayLike, folds: tuple[int, int]) -> int:\n",
     "  for direction in folds:\n",
     "    data = fold(data, direction)\n",
-    "  return np.where(data > 0, 1, 0)\n",
+    "  return np.where(data > 0, '#', ' ')\n",
     "\n",
     "result = day13_2(origami, folds)\n",
-    "np.savetxt('output_day13.txt', result, fmt='%d')\n"
+    "np.savetxt('output_day13.txt', result, fmt='%s')\n"
    ]
   },
   {
