solve day 14 part 1

--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
        "850"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1375,7 @@
     "  return np.where(data > 0, '#', ' ')\n",
     "\n",
     "result = day13_2(origami, folds)\n",
-    "np.savetxt('output_day13.txt', result, fmt='%s')\n"
+    "np.savetxt('output_day13.txt', result, fmt='%s')"
    ]
   },
   {
@@ -1387,10 +1387,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data14 = data(14)\n",
+    "\n",
+    "def format14(data: list[str]) -> tuple[str, dict[str, str]]:\n",
+    "  sequence = data[0]\n",
+    "  transitions = {input: output for input, output in (line.split(' -> ') for line in data[2:])}\n",
+    "  return sequence, transitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day14(data: list[str]) -> int:\n",
+    "  sequence, transitions = format14(data)\n",
+    "  for i in range(10):\n",
+    "    sequence = transition(sequence, transitions)\n",
+    "  return Counter(sequence)\n",
+    "\n",
+    "def transition(input: str, transitions: dict[str, str]) -> str:\n",
+    "  new = ''\n",
+    "  for i in range(1, len(input)):\n",
+    "    previous, current = input[i-1], input[i]\n",
+    "    token = f'{previous}{current}'\n",
+    "    new += f'{previous}{transitions[token]}'\n",
+    "  return f'{new}{input[-1]}'\n",
+    "\n",
+    "day14(data14)"
+   ]
   }
  ],
  "metadata": {
