use dp to solve part 2

--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,37 +1401,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "2435"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def day14(data: list[str]) -> int:\n",
-    "  sequence, transitions = format14(data)\n",
-    "  for i in range(10):\n",
-    "    sequence = transition(sequence, transitions)\n",
-    "  return Counter(sequence)\n",
+    "def day14(days: int) -> int:\n",
+    "  sequence, transitions = format14(data14) \n",
     "\n",
-    "def transition(input: str, transitions: dict[str, str]) -> str:\n",
-    "  new = ''\n",
-    "  for i in range(1, len(input)):\n",
-    "    previous, current = input[i-1], input[i]\n",
-    "    token = f'{previous}{current}'\n",
-    "    new += f'{previous}{transitions[token]}'\n",
-    "  return f'{new}{input[-1]}'\n",
+    "  @lru_cache(maxsize=None)\n",
+    "  def transition(input: str, steps: int) -> str:\n",
+    "    output = transitions[input]\n",
+    "    if steps == 0:\n",
+    "      return Counter(f'{input[0]}{output}')\n",
+    "    return transition(f'{input[0]}{output}', steps - 1) + transition(f'{output}{input[1]}', steps - 1)\n",
+    "      \n",
+    "  def run_transition(input: str, steps: int) -> str:\n",
+    "    new = Counter()\n",
+    "    for i in range(1, len(input)):\n",
+    "      new += transition(input[i-1:i+1], steps)\n",
+    "    new[input[-1]] += 1\n",
+    "    return new\n",
     "\n",
-    "day14(data14)"
+    "  counts = run_transition(sequence, days - 1).most_common()\n",
+    "  return counts[0][1] - counts[-1][1]\n",
+    "\n",
+    "day14(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2587447599164"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day14(40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
