--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,10 +1467,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data15 = np.array(data(15, split_int_row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "621"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def generate_array_graph(data: npt.ArrayLike) -> nx.Graph:\n",
+    "  graph = nx.DiGraph()\n",
+    "  for i in range(data.shape[0]):\n",
+    "    for j in range(data.shape[1]):\n",
+    "      if i+1 < data.shape[0]:\n",
+    "        graph.add_edge((i, j), (i+1, j), weight=data[i+1, j])\n",
+    "        graph.add_edge((i+1, j), (i, j), weight=data[i, j])\n",
+    "      if j+1 < data.shape[1]:\n",
+    "        graph.add_edge((i, j), (i, j+1), weight=data[i, j+1])\n",
+    "        graph.add_edge((i, j+1), (i, j), weight=data[i, j])\n",
+    "  return graph\n",
+    "\n",
+    "def day15(data: npt.ArrayLike) -> int:\n",
+    "  graph = generate_array_graph(data)\n",
+    "  path = nx.algorithms.shortest_paths.weighted.dijkstra_path(graph, (0, 0), (data.shape[0]-1, data.shape[1]-1))\n",
+    "  scores = [data[x] for x in path[1:]]\n",
+    "  return sum(scores)\n",
+    "\n",
+    "day15(data15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 500)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2904"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def wrap_general(start: int, end: int, num: int) -> int:\n",
+    "  return start + (num - start) % (end - start)\n",
+    "\n",
+    "def wrap(num: int) -> int:\n",
+    "  return wrap_general(1, 10, num)\n",
+    "\n",
+    "def expand_array(data: npt.ArrayLike) -> npt.ArrayLike:\n",
+    "  temp = data.copy()\n",
+    "  for i in range(1, 5):\n",
+    "    temp = np.concatenate((temp, wrap(data + i)), axis=1)\n",
+    "  result = temp.copy()\n",
+    "  for i in range(1, 5):\n",
+    "    result = np.concatenate((result, wrap(temp + i)), axis=0)\n",
+    "  print(result.shape)\n",
+    "  return result\n",
+    "\n",
+    "day15(expand_array(data15))"
+   ]
   }
  ],
  "metadata": {
