--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -1462,7 +1462,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 15"
+    "## Day 15\n",
+    "\n",
+    "Dijkstra"
    ]
   },
   {
@@ -1476,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1485,12 +1487,13 @@
        "621"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# TODO: this is pretty slow, some optimization might be called for\n",
     "def generate_array_graph(data: npt.ArrayLike) -> nx.Graph:\n",
     "  graph = nx.DiGraph()\n",
     "  for i in range(data.shape[0]):\n",
@@ -1505,32 +1508,24 @@
     "\n",
     "def day15(data: npt.ArrayLike) -> int:\n",
     "  graph = generate_array_graph(data)\n",
-    "  path = nx.algorithms.shortest_paths.weighted.dijkstra_path(graph, (0, 0), (data.shape[0]-1, data.shape[1]-1))\n",
-    "  scores = [data[x] for x in path[1:]]\n",
-    "  return sum(scores)\n",
+    "  length = nx.algorithms.shortest_paths.weighted.dijkstra_path_length(graph, (0, 0), (data.shape[0]-1, data.shape[1]-1))\n",
+    "  return length\n",
     "\n",
     "day15(data15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(500, 500)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "2904"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1549,11 +1544,24 @@
     "  result = temp.copy()\n",
     "  for i in range(1, 5):\n",
     "    result = np.concatenate((result, wrap(temp + i)), axis=0)\n",
-    "  print(result.shape)\n",
     "  return result\n",
-    "\n",
+    "  \n",
     "day15(expand_array(data15))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
