--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,10 @@
     "  return [int(x) for x in row]\n",
     "\n",
     "def bin2int(l: Union[list[int], str]) -> int:\n",
-    "  return int(\"\".join(str(i) for i in l), 2)"
+    "  return int(\"\".join(str(i) for i in l), 2)\n",
+    "\n",
+    "def triangular_number(n: int) -> int:\n",
+    "  return n * (n + 1) // 2"
    ]
   },
   {
@@ -661,7 +664,7 @@
    "source": [
     "## Day 7\n",
     "\n",
-    "Minimize v-shaped curve $ |F(c)| $ where $ A - c = F $ using binary search"
+    "Minimize v-shaped curve $ |F(c)| $ where $ A - c = F $"
    ]
   },
   {
@@ -724,24 +727,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "96744904"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'day7' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1361/4140118952.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtriangular_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mday7\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfuel_used2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'day7' is not defined"
+     ]
     }
    ],
    "source": [
-    "def triangular_number(n: int) -> int:\n",
-    "  return n * (n + 1) // 2\n",
-    "\n",
     "def fuel_used2(input: npt.ArrayLike) -> int:\n",
     "  return np.sum(triangular_number(np.abs(input)))\n",
     "\n",
@@ -1723,7 +1724,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 17"
+    "## Day 17\n",
+    "\n",
+    "More triangular numbers and some kinematic equations with a = -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data17 = data(17)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10296"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Position = tuple[int, int]\n",
+    "\n",
+    "def format17(data: str) -> tuple[tuple[int, int]]:\n",
+    "  pattern = re.compile('.+x=([0-9\\-]+)\\.\\.([0-9\\-]+), y=([0-9\\-]+)\\.\\.([0-9\\-]+)')\n",
+    "  x1, x2, y1, y2 = pattern.match(data).groups()\n",
+    "  return (int(x1), int(x2)), (int(y1), int(y2))\n",
+    "\n",
+    "\n",
+    "def day17(data: str):\n",
+    "  _, y = format17(data)\n",
+    "  # Assume x is always positive and y is always negative\n",
+    "  return triangular_number(y[0])\n",
+    "\n",
+    "day17(data17)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10296"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day17_2(data: str):\n",
+    "  x, y = format17(data)\n",
+    "\n",
+    "  def check_shot(vx: int, vy: int):\n",
+    "    steps = 1 if vy <= 0 else vy * 2 + 2\n",
+    "    while True:\n",
+    "      dx = (triangular_number(vx) - triangular_number(vx - steps)) if vx > steps else triangular_number(vx)\n",
+    "      dy = triangular_number(vy) - triangular_number(vy - steps)\n",
+    "      if dx > x[1] or dy < y[0]:\n",
+    "        return False\n",
+    "      if dx >= x[0] and dx <= x[1] and dy >= y[0] and dy <= y[1]:\n",
+    "        return True\n",
+    "      steps += 1\n",
+    "\n",
+    "  vx_min = 0\n",
+    "  # Assume x velocity can always be totally exhausted\n",
+    "  while triangular_number(vx_min) < x[0]:\n",
+    "    vx_min += 1\n",
+    "  vx_max = x[1]\n",
+    "\n",
+    "  vy_max = 0\n",
+    "  while triangular_number(vy_max) != triangular_number(y[0]):\n",
+    "    vy_max += 1\n",
+    "  vy_min = y[0]\n",
+    "\n",
+    "  results = []\n",
+    "  for vx in range(vx_min, vx_max + 1):\n",
+    "    for vy in range(vy_min, vy_max + 1):\n",
+    "      if check_shot(vx, vy):\n",
+    "        results.append((vx, vy))\n",
+    "\n",
+    "  return len(results)\n",
+    "\n",
+    "day17(data17)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 18"
    ]
   },
   {
