add some explanatory comments to day 17

--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
        "10296"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,6 +1766,8 @@
     "def day17(data: str):\n",
     "  _, y = format17(data)\n",
     "  # Assume x is always positive and y is always negative\n",
+    "  # Since the upward distance will be totally negated by gravity, what actually matters is the final step, which will be of distance -(y+1)\n",
+    "  # This is equal to triangular_number(abs(y)-1), or equivalently triangular_number(y)\n",
     "  return triangular_number(y[0])\n",
     "\n",
     "day17(data17)\n"
@@ -1773,16 +1775,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10296"
+       "2371"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1793,19 @@
     "def day17_2(data: str):\n",
     "  x, y = format17(data)\n",
     "\n",
+    "  # Max x velocity is a single step shot to the end of the x-grid\n",
+    "  vx_min, vx_max = 0, x[1]\n",
+    "  # Min x velocity will be totally exhausted upon reaching the start of the x-grid\n",
+    "  while triangular_number(vx_min) < x[0]:\n",
+    "    vx_min += 1\n",
+    "\n",
+    "  # Min y velocity is a single step shot to the bottom of the y-grid (negative)\n",
+    "  # Max y velocity is the result of part 1\n",
+    "  vy_min, vy_max = y[0], abs(y[0]) - 1\n",
+    "\n",
     "  def check_shot(vx: int, vy: int):\n",
+    "    # Steps should be at least 1 when shooting downwards\n",
+    "    # When shooting upwards, there will be y upward steps, 1 hanging step, y downward steps, and then at least one -(y+1) or greater step\n",
     "    steps = 1 if vy <= 0 else vy * 2 + 2\n",
     "    while True:\n",
     "      dx = (triangular_number(vx) - triangular_number(vx - steps)) if vx > steps else triangular_number(vx)\n",
@@ -1802,17 +1816,6 @@
     "        return True\n",
     "      steps += 1\n",
     "\n",
-    "  vx_min = 0\n",
-    "  # Assume x velocity can always be totally exhausted\n",
-    "  while triangular_number(vx_min) < x[0]:\n",
-    "    vx_min += 1\n",
-    "  vx_max = x[1]\n",
-    "\n",
-    "  vy_max = 0\n",
-    "  while triangular_number(vy_max) != triangular_number(y[0]):\n",
-    "    vy_max += 1\n",
-    "  vy_min = y[0]\n",
-    "\n",
     "  results = []\n",
     "  for vx in range(vx_min, vx_max + 1):\n",
     "    for vy in range(vy_min, vy_max + 1):\n",
@@ -1821,7 +1824,7 @@
     "\n",
     "  return len(results)\n",
     "\n",
-    "day17(data17)"
+    "day17_2(data17)"
    ]
   },
   {
