--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
        "4140"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,6 +2126,65 @@
     "\n",
     "data18 = data(18, eval)\n",
     "day18(data18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2), (1, 3), (1, 4), (2, 3), (2, 4), (3, 4)]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x for x in itertools.combinations([1, 2, 3, 4], 2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4779"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data18 = data(18, eval)\n",
+    "\n",
+    "def day18_2(data: list[tuple[int, int]]):\n",
+    "  largest = 0\n",
+    "  for combo in itertools.combinations(data, 2):\n",
+    "    tree = Tree(combo[0])\n",
+    "    tree.add(combo[1])\n",
+    "    tree.reduce()\n",
+    "    if (result := magnitude(tree.root)) > largest:\n",
+    "      largest = result\n",
+    "\n",
+    "    tree = Tree(combo[1])\n",
+    "    tree.add(combo[0])\n",
+    "    tree.reduce()\n",
+    "    if (result := magnitude(tree.root)) > largest:\n",
+    "      largest = result\n",
+    "    # print(combo, result)\n",
+    "  return largest\n",
+    "\n",
+    "day18_2(data18)"
    ]
   }
  ],
