--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -1831,169 +1831,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 18"
+    "## Day 18\n",
+    "\n",
+    "Unbalanced binary tree, hopping across leaves"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
+    "TreeList = tuple[Union[int, 'TreeList'], Union[int, 'TreeList']]\n",
     "data18 = data(18, eval)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class BaseNode:\n",
-    "  def __init__(self, parent: Optional[\"Node\"] = None, is_left: Optional[bool] = True):\n",
-    "    self.is_left = is_left\n",
-    "    self.parent = parent\n",
-    "\n",
-    "class Leaf(BaseNode):\n",
-    "  def __init__(self, value: int, parent: Optional[\"Node\"] = None, is_left: Optional[bool] = True):\n",
-    "    super().__init__(parent, is_left)\n",
-    "    self.value = value\n",
-    "\n",
-    "class Node(BaseNode):\n",
-    "  def __init__(self, left: Union[Leaf, 'Node'], right: Union[Leaf, 'Node'], parent: Optional[\"Node\"] = None, is_left: Optional[bool] = True):\n",
-    "    super().__init__(parent, is_left)\n",
-    "    self.left = left\n",
-    "    left.is_left = True\n",
-    "    self.right = right\n",
-    "    right.is_left = False\n",
-    "\n",
-    "def inorder(node: BaseNode, depth = 0):\n",
-    "  if type(node) is Leaf:\n",
-    "    yield node\n",
-    "  else:\n",
-    "    yield from inorder(node.left)\n",
-    "    yield from inorder(node.right)\n",
-    "\n",
-    "def dfs(node: BaseNode, depth = 0):\n",
-    "  if type(node) is Leaf:\n",
-    "    yield node, depth\n",
-    "  else:\n",
-    "    if type(node.left) is Leaf and type(node.right) is not Leaf:\n",
-    "      yield from dfs(node.right, depth+1)\n",
-    "      yield from dfs(node.left, depth+1)\n",
-    "    else:\n",
-    "      yield from dfs(node.left, depth+1)\n",
-    "      yield from dfs(node.right, depth+1)   \n",
-    "\n",
-    "TreeList = tuple[Union[int, 'TreeList'], Union[int, 'TreeList']]\n",
-    "\n",
-    "def make_leaf(node: Union[TreeList, int]):\n",
-    "  if type(node) is int:\n",
-    "    return Leaf(node)\n",
-    "  return make_node(node)\n",
-    "\n",
-    "def make_node(data: TreeList, parent: Optional[\"Node\"] = None, is_left: Optional[bool] = True):\n",
-    "  left, right = make_leaf(data[0]), make_leaf(data[1])\n",
-    "  node = Node(left, right, parent, is_left)\n",
-    "  left.parent, right.parent = node, node\n",
-    "  return node\n",
-    "\n",
-    "class Tree:\n",
-    "  def __init__(self, data: list[int]):\n",
-    "    self.root = make_node(data)\n",
-    "\n",
-    "  def add(self, data: list[int]):\n",
-    "    node = make_node(data)\n",
-    "    root = self.root\n",
-    "    self.root = Node(root, node)\n",
-    "    root.parent = self.root\n",
-    "    node.parent = self.root\n",
-    "\n",
-    "  def switch(self, node: BaseNode):\n",
-    "    if node.is_left:\n",
-    "      node.parent.left = node\n",
-    "    else:\n",
-    "      node.parent.right = node\n",
-    "\n",
-    "  def reduce(self):\n",
-    "    changed = True\n",
-    "    while changed:\n",
-    "      changed = self.reduce_once()\n",
-    "      print('reduced', [x.value for x in inorder(self.root)])\n",
-    "\n",
-    "  def reduce_once(self):\n",
-    "    previous, remainder = None, 0\n",
-    "    leaves = list(inorder(self.root))\n",
-    "    for leaf, depth in dfs(self.root):\n",
-    "      if remainder:\n",
-    "        leaf.value += remainder\n",
-    "        remainder = 0\n",
-    "        return True\n",
-    "      \n",
-    "      if depth > 4:\n",
-    "        # Explode\n",
-    "        if leaf.is_left:\n",
-    "          if previous:\n",
-    "            previous.value += leaf.value\n",
-    "          leaf.value = 0\n",
-    "        else:\n",
-    "          remainder, leaf.value = leaf.value, 0\n",
-    "          # Note: if a node explodes, both its children are leaves\n",
-    "          leaf = Leaf(0, leaf.parent.parent, leaf.parent.is_left)\n",
-    "          self.switch(leaf)\n",
-    "\n",
-    "      elif leaf.value >= 10:\n",
-    "        # Split\n",
-    "        left, right = leaf.value // 2, int(np.ceil(leaf.value/2))\n",
-    "        if depth > 3:\n",
-    "          # Exploded split\n",
-    "          previous.value += left\n",
-    "          remainder = right\n",
-    "          leaf = Leaf(0, leaf.parent.parent, leaf.parent.is_left)\n",
-    "          self.switch(leaf)\n",
-    "        else:\n",
-    "          node = make_node([left, right], leaf.parent, leaf.is_left)\n",
-    "          self.switch(node)\n",
-    "        return True\n",
-    "\n",
-    "      previous = leaf\n",
-    "    return False\n",
-    "\n",
-    "def day18(data: list[tuple[int, int]]):\n",
-    "  result = Tree(data[0])\n",
-    "  print([x.value for x in inorder(result.root)])\n",
-    "  result.reduce()\n",
-    "  for item in data[1:]:\n",
-    "    print('adding', item)\n",
-    "    result.add(item)\n",
-    "    print('added', [(x.value) for x in inorder(result.root)])\n",
-    "    result.reduce()\n",
-    "\n",
-    "  return [(x.value) for x in inorder(result.root)]\n",
-    "\n",
-    "data18 = data(18, eval)\n",
-    "day18(data18)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[6, 6, 7, 6, 7, 7, 7, 0, 7, 7, 7, 7, 7, 8, 9, 9]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "4140"
+       "4202"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,12 +1881,16 @@
     "    self.right = right\n",
     "    right.is_left = False\n",
     "\n",
-    "def inorder_debug(node: BaseNode, depth = 0):\n",
-    "  if type(node) is Leaf:\n",
-    "    yield node, depth\n",
-    "  else:\n",
-    "    yield from inorder_debug(node.left, depth+1)\n",
-    "    yield from inorder_debug(node.right, depth+1)\n",
+    "def make_leaf(node: Union[TreeList, int]):\n",
+    "  if type(node) is int:\n",
+    "    return Leaf(node)\n",
+    "  return make_node(node)\n",
+    "\n",
+    "def make_node(data: TreeList, parent: Optional[\"Node\"] = None, is_left: Optional[bool] = True):\n",
+    "  left, right = make_leaf(data[0]), make_leaf(data[1])\n",
+    "  node = Node(left, right, parent, is_left)\n",
+    "  left.parent, right.parent = node, node\n",
+    "  return node\n",
     "\n",
     "def inorder(node: BaseNode):\n",
     "  if type(node) is Leaf:\n",
@@ -2031,7 +1899,7 @@
     "    yield from inorder(node.left)\n",
     "    yield from inorder(node.right)\n",
     "\n",
-    "def dfs(root: Tree):\n",
+    "def dfs(root: 'Tree'):\n",
     "  queue = deque([(root, 0)])\n",
     "  results = deque()\n",
     "  while queue:\n",
@@ -2043,19 +1911,6 @@
     "      queue.append((node.left, depth+1))\n",
     "  return results\n",
     "\n",
-    "TreeList = tuple[Union[int, 'TreeList'], Union[int, 'TreeList']]\n",
-    "\n",
-    "def make_leaf(node: Union[TreeList, int]):\n",
-    "  if type(node) is int:\n",
-    "    return Leaf(node)\n",
-    "  return make_node(node)\n",
-    "\n",
-    "def make_node(data: TreeList, parent: Optional[\"Node\"] = None, is_left: Optional[bool] = True):\n",
-    "  left, right = make_leaf(data[0]), make_leaf(data[1])\n",
-    "  node = Node(left, right, parent, is_left)\n",
-    "  left.parent, right.parent = node, node\n",
-    "  return node\n",
-    "\n",
     "class Tree:\n",
     "  def __init__(self, data: list[int]):\n",
     "    self.root = make_node(data)\n",
@@ -2066,6 +1921,7 @@
     "    self.root = Node(root, node)\n",
     "    root.parent = self.root\n",
     "    node.parent = self.root\n",
+    "    self.reduce()\n",
     "\n",
     "  def switch(self, node: BaseNode):\n",
     "    if node.is_left:\n",
@@ -2077,80 +1933,61 @@
     "    changed = True\n",
     "    while changed:\n",
     "      changed = self.reduce_once()\n",
-    "      # print('reduced', [(x.value, depth) for x, depth in inorder_debug(self.root)])\n",
     "\n",
     "  def reduce_once(self):\n",
+    "    if self.explode():\n",
+    "      return True\n",
+    "    if self.split():\n",
+    "      return True\n",
+    "    return False\n",
+    "\n",
+    "  def explode(self):\n",
     "    leaves = list(inorder(self.root))\n",
     "    indices = {leaf: i for i, leaf in enumerate(inorder(self.root))}\n",
     "    for leaf, depth in dfs(self.root):\n",
-    "      if depth > 4:\n",
-    "        # Explode\n",
-    "        index = indices[leaf]\n",
-    "        # Note: due to order of dfs, the left child is always the first one\n",
-    "        if index > 0:\n",
-    "          leaves[index-1].value += leaf.value\n",
-    "        # Note: if a node explodes, both its children are leaves\n",
-    "        right = leaves[index+1]\n",
-    "        if len(leaves) > index+2:\n",
-    "          leaves[index+2].value += right.value\n",
-    "        leaf.value, right.value = 0, 0\n",
-    "        leaf = Leaf(0, leaf.parent.parent, leaf.parent.is_left)\n",
-    "        self.switch(leaf)\n",
-    "        return True\n",
+    "      if depth <= 4:\n",
+    "        continue\n",
+    "      # Explode\n",
+    "      index = indices[leaf]\n",
+    "      # Note: due to order of dfs, the left child is always the first one\n",
+    "      if index > 0:\n",
+    "        leaves[index-1].value += leaf.value\n",
+    "      # Note: if a node explodes, both its children are leaves\n",
+    "      right = leaves[index+1]\n",
+    "      if len(leaves) > index+2:\n",
+    "        leaves[index+2].value += right.value\n",
+    "      leaf.value, right.value = 0, 0\n",
+    "      self.switch(Leaf(0, leaf.parent.parent, leaf.parent.is_left))\n",
+    "      return True\n",
     "\n",
+    "  def split(self):\n",
     "    for leaf in inorder(self.root):\n",
-    "      if leaf.value >= 10:\n",
-    "        # Split\n",
-    "        left, right = leaf.value // 2, int(np.ceil(leaf.value/2))\n",
-    "        node = make_node([left, right], leaf.parent, leaf.is_left)\n",
-    "        self.switch(node)\n",
-    "        return True\n",
-    "        \n",
-    "    return False\n",
+    "      if leaf.value < 10:\n",
+    "        continue\n",
+    "      # Split\n",
+    "      left, right = leaf.value // 2, int(np.ceil(leaf.value/2))\n",
+    "      node = make_node([left, right], leaf.parent, leaf.is_left)\n",
+    "      self.switch(node)\n",
+    "      return True\n",
     "\n",
-    "def magnitude(node: Node):\n",
+    "def magnitude(node: Node) -> int:\n",
     "  left, right = node.left, node.right\n",
     "  left = magnitude(node.left) if type(node.left) is not Leaf else node.left.value\n",
     "  right = magnitude(node.right) if type(node.right) is not Leaf else node.right.value\n",
     "  return 3 * left + 2 * right\n",
     "\n",
-    "def day18(data: list[tuple[int, int]]):\n",
+    "def day18(data: list[TreeList]):\n",
     "  result = Tree(data[0])\n",
-    "  result.reduce()\n",
     "  for item in data[1:]:\n",
     "    result.add(item)\n",
-    "    result.reduce()\n",
-    "\n",
-    "  print([(x.value) for x in inorder(result.root)])\n",
     "  return magnitude(result.root)\n",
     "\n",
-    "data18 = data(18, eval)\n",
     "day18(data18)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 2), (1, 3), (1, 4), (2, 3), (2, 4), (3, 4)]"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[x for x in itertools.combinations([1, 2, 3, 4], 2)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2159,33 +1996,40 @@
        "4779"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data18 = data(18, eval)\n",
+    "def get_combo(x: TreeList, y: TreeList):\n",
+    "  result = Tree(x)\n",
+    "  result.add(y)\n",
+    "  return magnitude(result.root)\n",
     "\n",
-    "def day18_2(data: list[tuple[int, int]]):\n",
-    "  largest = 0\n",
-    "  for combo in itertools.combinations(data, 2):\n",
-    "    tree = Tree(combo[0])\n",
-    "    tree.add(combo[1])\n",
-    "    tree.reduce()\n",
-    "    if (result := magnitude(tree.root)) > largest:\n",
-    "      largest = result\n",
+    "def get_combo_size(x: TreeList, y: TreeList):\n",
+    "  return max(get_combo(x, y), get_combo(y, x))\n",
     "\n",
-    "    tree = Tree(combo[1])\n",
-    "    tree.add(combo[0])\n",
-    "    tree.reduce()\n",
-    "    if (result := magnitude(tree.root)) > largest:\n",
-    "      largest = result\n",
-    "    # print(combo, result)\n",
-    "  return largest\n",
+    "def day18_2(data: list[TreeList]):\n",
+    "  # Quite slow - could be optimized\n",
+    "  return max([get_combo_size(x, y) for x, y in itertools.combinations(data, 2)])\n",
     "\n",
     "day18_2(data18)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
