--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "from collections import defaultdict, Counter, deque\n",
     "import itertools\n",
     "from functools import lru_cache\n",
+    "import json\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
     "import networkx as nx\n",
@@ -1838,17 +1839,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "TreeList = tuple[Union[int, 'TreeList'], Union[int, 'TreeList']]\n",
-    "data18 = data(18, eval)"
+    "data18 = data(18, json.loads)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1858,7 @@
        "4202"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1905,6 +1906,7 @@
     "  while queue:\n",
     "    node, depth = queue.popleft()\n",
     "    if type(node) is Leaf:\n",
+    "      # TODO: figure how to get the desired output earlier\n",
     "      results.appendleft((node, depth))\n",
     "    else:\n",
     "      queue.append((node.right, depth+1))\n",
@@ -1935,6 +1937,7 @@
     "      changed = self.reduce_once()\n",
     "\n",
     "  def reduce_once(self):\n",
+    "    # TODO: figure out ahead of time what the max depth size is\n",
     "    if self.explode():\n",
     "      return True\n",
     "    if self.split():\n",
@@ -2023,13 +2026,6 @@
    "source": [
     "## Day 19"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
