basically complete day 19

--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2025,6 +2025,89 @@
    "metadata": {},
    "source": [
     "## Day 19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Position = tuple[int, int, int]\n",
+    "\n",
+    "def format19(data: list[str]) -> list[list[Position]]:\n",
+    "  scanners, scanner = [], []\n",
+    "  for line in data:\n",
+    "    if 'scanner' in line:\n",
+    "      continue\n",
+    "    if not line:\n",
+    "      scanners.append(scanner)\n",
+    "      scanner = []\n",
+    "    else:\n",
+    "      scanner.append(np.array([int(x) for x in line.split(',')]))\n",
+    "  return scanners\n",
+    "data19 = format19(data(19))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.  0. -0.]\n",
+      " [-0.  1. -0.]\n",
+      " [-0.  0. -1.]] [   68. -1246.   -43.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen_distances(data: list[Position]) -> np.array:\n",
+    "  distances = np.zeros((len(data), len(data)))\n",
+    "  for i, j in itertools.combinations(range(len(data)), 2):\n",
+    "    distance = np.linalg.norm(data[i] - data[j])\n",
+    "    distances[i, j] = distance\n",
+    "    distances[j, i] = distance\n",
+    "  return distances\n",
+    "\n",
+    "def detect_collisions(a: np.array, b: np.array) -> np.array:\n",
+    "  result = []\n",
+    "  for i, target in enumerate(a):\n",
+    "    for j, candidate in enumerate(b):\n",
+    "      collisions = set(target).intersection(set(candidate))\n",
+    "      if len(collisions) == 12:\n",
+    "        result.append((i, j))\n",
+    "  return result\n",
+    "\n",
+    "def determine_transformation(a: list[np.array], b: list[np.array], collisions: list[tuple[int, int]]) -> np.array:\n",
+    "  Y = np.vstack([np.array(a[i[0]]) for i in collisions]).T\n",
+    "  X = np.vstack([np.array(b[i[1]]) for i in collisions]).T\n",
+    "  for signs in itertools.product([-1, 1], repeat=3):\n",
+    "    r = np.identity(3)*np.array(signs)\n",
+    "    # Note: this produces double the results - too lazy to fix\n",
+    "    for x, y, z in itertools.permutations([0, 1, 2], 3):\n",
+    "      rotation = np.array([r[x], r[y], r[z]])\n",
+    "      rotated = rotation@X\n",
+    "      translation = Y - rotated\n",
+    "      if np.unique(translation).size <= 3:\n",
+    "        return rotation, translation[:, 0]\n",
+    "\n",
+    "def day19(data: list):\n",
+    "  a = data[0]\n",
+    "  ad = gen_distances(a)\n",
+    "  b = data[1]\n",
+    "  bd = gen_distances(b)\n",
+    "  collisions = detect_collisions(ad, bd)\n",
+    "  rotation, translation = determine_transformation(a, b, collisions)\n",
+    "\n",
+    "  print(rotation, translation)\n",
+    "  # for i, v, in enumerate(data):\n",
+    "\n",
+    "\n",
+    "day19(data19)"
    ]
   }
  ],
